<resources>
    <string name="app_name">PhotoGallery</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear</string>
    <string name="reload">Reload</string>
    <string name="photo_progress_loaded">Loading</string>
    <string name="start_polling">Start Polling</string>
    <string name="stop_polling">Stop</string>
    <string name="new_picture_arriving">New Picture here !</string>
    <string name="new_picture_title">New picture is here !</string>
    <string name="new_picture_content">New pictures for your app has been arriving !</string>
    <string name="alarm_clock">Alarm Clock</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_by_url">Open By Url :</string>
    <string name="open_with_external_browser">Open with external browser</string>
    <string name="open_in_app_browser">Open in-app browser</string>
    <string name="in_app_browser">In-app browser</string>
    <string name="photo_setting">Setting !</string>

    <string name="use_gps_setting">Use GPS Setting when searching for photos</string>
    <string name="photo_map">Photo Map</string>
    <string name="open_in_map">Open In Map</string>
</resources>
